# makefile2doc

./: 404.html  Cargo.toml  LICENSE-MIT  README.md  ai_context.html  automation.html  cli_usage.html  convention.html  example.html  index.html  installation.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-28716316.js  searchindex-90a8464f.js  searchindex-a98eb832.js  searchindex-adb13462.js  searchindex-afc3f190.js  searchindex-c5b0713a.js  searchindex-d6041463.js  toc-bb925fd6.js  toc-eae25d04.js  toc.html
.github/workflows/: documentation.yml  release.yml
documentation/: book.toml
documentation/src/: SUMMARY.md  ai_context.md  automation.md  cli_usage.md  convention.md  example.md  installation.md  introduction.md
src/: anchor.rs  generator.rs  lib.rs  main.rs  model.rs  parser.rs
tests/: integration.rs
tests/fixtures/: Makefile  expected.md
